
Bugfixes:

* SUPPORT-27: ods-ksmutil: simplify zone delete so that it only marks keys 
  as dead (rather than actually removing them). Leave the key removal to purge
  jobs.
* SUPPORT-29: Signer Engine: Fix ods-signer clear <zone> command exits
  prematurely [OPENDNSSEC-289].
* SUPPORT-30: Signer Engine: RRSIGs are left in the signed zone when
  authoritative RRsets become glue [OPENDNSSEC-282].
* OPENDNSSEC-290: Signer Engine: Fix false conflict when changing CNAME into 
  other RRtype.
* OPENDNSSEC-298: Enforcer: Only unlink existing pidfile on exit if we wrote it.
* OPENDNSSEC-304: Signer Engine: Check pidfile on startup, if pidfile exists
  and corresponding process is running, then complain and exit.
* Fix assertion error when printing signed zone with empty non-terminals and NSEC.
* OPENDNSSEC-306: Cant delete zone until Enforcer made signerconf.


OpenDNSSEC 1.4.0a2 - 2012-05-24

* OPENDNSSEC-226: Change in conf.xml: Configure the DNS listener IP address
  with /Listener/Interface/Address instead of /Listener/Interface/IPv{4,6}.
* OPENDNSSEC-228: Signer Engine: Make 'ods-signer update' reload signconfs
  even if zonelist has not changed.
* OPENDNSSEC-231: Signer Engine: Allow for Classless IN-ADDR.ARPA names
  (RFC 2317).
* OPENDNSSEC-249: ods-ksmutil: If key export finds nothing to do then say so
  rather than display nothing which might be misinterpreted.
* OPENDNSSEC-262: Signer Engine: Make DNS Adapter ACL optional.
* OPENDNSSEC-263: Signer Engine: Added EDNS0 support, so that zone transfers
  and SOA requests with OPT RRs are possible.
* Enforcer: Add indexes for foreign keys. (sqlite only, MySQL already has them.)

Bugfixes:
* OPENDNSSEC-247: Signer Engine: TTL on NSEC(3) was not updated on SOA
  Minimum change.
* OPENDNSSEC-252: Signer Engine: Mark xfrhandler started, so that we don't
  try to join a non-existing thread on exit.
* OPENDNSSEC-259: Signer Engine: Fix assertion failure for outbound AXFR for
  large zones.