@@ -11,6 +11,7 @@ Bugfixes:
   prematurely [OPENDNSSEC-289].
 * SUPPORT-30: Signer Engine: RRSIGs are left in the signed zone when
   authoritative RRsets become glue [OPENDNSSEC-282].
+* OPENDNSSEC-278: ods-ksmutil processes waiting forever to get DB lock
 * OPENDNSSEC-290: Signer Engine: Fix false conflict when changing CNAME into 
   other RRtype.
 * OPENDNSSEC-298: Enforcer: Only unlink existing pidfile on exit if we wrote it.
